<resources>
    <string name="app_name">NefroConsultor</string>
    <string name="result_otros_by">Por</string>
    <string name="doubleFormat">&#37;1$.2f</string>
    <string name="action_documentacion">Documentación</string>
    <string name="action_info">Acerca de</string>
    <string name="action_email">Sugerencias</string>
    <string name="action_refresh">Reiniciar datos</string>
    <string name="defaultValue">0</string>
    <string name="edad">Edad</string>
    <string name="anos">años</string>
    <string name="sexo">Sexo</string>
    <string name="creatinina">Cr. plasmática</string>
    <string name="albuminuria">Albuminuria</string>
    <string name="cociente">cociente A/CR</string>
    <string name="mgDl">mg/dL</string>
    <string name="mgg">mg/g</string>
    <string name="raza">Raza negra</string>
    <string name="otrosMotivos">Otros motivos</string>
    <string name="calcular">Calcular</string>
    <string name="emailSubject">[NefroConsultor] Contacto con Madilon Medical Care</string>
    <string name="title_activity_otros">OTROS MOTIVOS</string>
    <string name="tituloMotivo1">Deterioro agudo de la función renal</string>
    <string name="explicacionMotivo1" formatted="false">Deterioro agudo en la función renal (caída del FGe > 25&#37;) en menos de un mes o un incremento de la creatinina sérica > 25&#37;
        en menos de 1 mes descartados factores exógenos (diarrea, vómitos, depleción por diuréticos en tratamiento con IECAs, ARA II o inhibidores directos de la renina).</string>
    <string name="tituloMotivo2">Deterioro progresivo de la función renal</string>
    <string name="explicacionMotivo2">Pacientes que presenten progresión renal (&gt; 5 ml/min/1.73m&lt;sup>&lt;small>2&lt;/small>&lt;/sup>/año).</string>
    <string name="tituloMotivo3">Hipertensión arterial resistente</string>
    <string name="explicacionMotivo3">ERC e HTA resistente refractaria al tratamiento (> 140/90 mmHg) con tres fármacos a plena dosis, uno de ellos diurético.</string>
    <string name="tituloMotivo4">Alteraciones del potasio sérico</string>
    <string name="explicacionMotivo4">Alteraciones en la concentración sérica de potasio (> 5,5 mmol/L o &lt; 3,5 mmol/L sin recibir diuréticos).</string>
    <string name="tituloMotivo5">Anemia asociada a ERC</string>
    <string name="explicacionMotivo5">Anemia: Hb &lt; 10,5 g/dL con ERC a pesar de corregir ferropenia (índice de saturación de la 
        transferrina ISAT > 20&#37; y ferritina > 100 ng/mL).</string>
    <string name="tituloMotivo6">Hematuria no urológica asociada a proteinuria</string>
    <string name="explicacionMotivo6">La presencia en el sedimento urinario de hematuria y/o leucocituria durante más de tres meses, una vez se ha descartado 
        la causa urológica o la infección de orina (incluida la tuberculosis urinaria), pueden ser indicio de glomerulonefritis, pielonefritis o nefritis 
        túbulo-intersticiales crónicas.</string>
    <string name="tituloMotivoOtros">Otros:</string>
    <string name="explicacionMotivoOtros">
        • Sospecha de causas genéticas de ERC.\n\n
        • Sospecha de poliquistosis renal. Los criterios actuales de poliquistosis renal autosómica dominante son:\n
             \t\t\t- 15-39 años: 3 o más quistes unilaterales o bilaterales.\n
             \t\t\t- 40-59 años: 2 o más quistes en cada riñón.\n
             \t\t\t- 60 años o más: 4 o más quistes en cada riñón.\n
             \t\t\t- Menos de 2 quistes en > 40 años es suficiente para excluir la enfermedad.\n\n
        • Litiasis renal con más de 4 episodios de cólicos nefríticos al año y/o que precisen 
        realización de un estudio metabólico (historia familiar de litiasis, presencia de litiasis bilateral, enfermedades inflamatorias intestinales, diarrea 
        crónica o síndromes de malabsorción, historia de cirugía bariátrica, presencia de nefrocalcinosis, etc.).</string>
    <string name="mostrarMas">mostrar más</string>
    <string name="mostrarMenos">ocultar</string>
	<string name="title_activity_result">RESULTADOS</string>
	<string name="fgecdk">FGe CKD EPI &#37;1$.2f</string>
	<string name="mdrd">FGe MDRD-IDMS &#37;1$.2f</string>
	<string name="units">ml/min/1,73m<sup><small>2</small></sup></string>
	<string name="clasificacion">Clasificación pronóstica según KDIGO:</string>
	<string name="result">ERC Estadio</string>
	<string name="resultAst">ERC* Estadio</string>
	<string name="recomendaciones">RECOMENDACIONES</string>
	<string name="remitirVsNoRemitir">VALORAR REMITIR A NEFROLOGÍA VS. SEGUIMIENTO POR MÉDICO DE AP</string>
	<string name="remitir">REMITIR AL ESPECIALISTA EN NEFROLOGÍA</string>
	<string name="remitirCaso1">REMITIR AL ESPECIALISTA EN NEFROLOGÍA si se ha confirmado descenso del FG &lt; 30 ml/min/1,73m<sup><small>2</small></sup> en 2 determinaciones durante al menos 3 meses</string>
	<string name="remitirCaso2">REMITIR AL ESPECIALISTA EN NEFROLOGÍA si se ha confirmado albuminuria > 300 mg/g en al menos 2 ocasiones durante al menos 3 meses</string>
	<string name="noRemitir">SEGUIMIENTO POR MÉDICO DE AP</string>
	<string name="noRemitirCaso1Subtitle">En pacientes mayores de 80 años con FGe 20&#8211;30 ml/min/1.73m<sup><small>2</small></sup> se recomienda remitir a nefrología si existe progresión renal, albuminuria > 300 mg/g, existen signos de alarma o existe planteamiento de tratamiento sustitutivo renal.</string>
   	<string name="text_recomendaciones_casoA2">La presencia de albuminuria de forma persistente es un signo no sólo de lesión renal, sino que muchas veces es signo 
   	    de “daño sistémico” más allá del riñón. Se trata de un marcador importante e independiente de riesgo cardiovascular global (disfunción endotelial, remodelado 
   	    arterial) y no únicamente un marcador de enfermedad renal.</string>
   	<string name="text_recomendaciones_casoA2_elena">\nLa presencia única de albuminuria, sin ninguna otra manifestación de daño renal, se puede detectar en otras 
   	    patologías (obesidad, tabaquismo, dermatitis, artritis, etc). Así mismo, elevaciones transitorias de la excreción de albúmina se pueden dar en presencia de 
   	    fiebre, infección, ejercicio físico intenso, insuficiencia cardiaca, inflamación articular inespecífica, HbA1c > 8&#37;, PA > 160/100 mmHg y LDL > 120 mg/dL.
   	</string>
	<string name="btnRecomendaciones">Otras recomendaciones</string>
	<string name="desc_guia1">NefroConsultor es una aplicación para smartphones que permite conocer la situación desde el punto de vista renal de un paciente, 
	    si tiene enfermedad renal crónica o no, el grado de ésta, e indica si el paciente deber ser seguido por su médico de atención primaria o remitido al 
	    especialista en Nefrología, además de hacer una serie de recomendaciones para el seguimiento de los pacientes con enfermedad renal crónica.\n\n
		Al abrir la aplicación aparece la pantalla principal donde habría que incluir los datos básicos del paciente que queremos valorar. Los datos son aislados 
		y no se vinculan en ningún momento con ningún dato de carácter personal que permita identificar al paciente. Los parámetros edad, Sexo (masculino y femenino), 
		creatinina plasmática y albuminuria son obligatorios, pudiendo en la albuminuria mantener el valor 0 predeterminado. Si el paciente es de raza negra habría 
		que marcar esta opción.                                                     
	</string>
	<string name="desc_guia2">Una vez completados estos datos, el usuario puede ir directamente a “calcular” y obtener un resultado, o acceder a a pantalla de 
	    “otros motivos”, que indicaría otros motivos por los que el paciente debería ser remitido a Nefrología.</string>
	<string name="desc_guia3">Una vez en “otros motivos”, cada una de las opciones se puede desplegar, apareciendo una explicación más amplia de la misma. 
	    Si se considera que es adecuada para el paciente se puede marcar. No es obligatorio marcar ninguna de ellas, y se puede volver a la pantalla anterior en 
	    el botón “volver”. Así mismo, también es posible marcar varias opciones al mismo tiempo, si el paciente cumple varias condiciones.</string>
    <string name="desc_guia4">Desde la pantalla de otros motivos, o desde la pantalla inicial, se puede acceder a calcular, y el programa mostrará la página de 
        resultados, indicando el filtrado glomerular estimado por la fórmulas MDRD-IDMS y CKD-EPI, el grado de enfermedad renal crónica y el estadio que le 
        correspondería al paciente según la clasificación pronóstica de las guías KDIGO. Indicará si según el documento de consenso antes mencionado el paciente 
        tiene indicación de ser remitido al especialista en Nefrología, o si debe ser seguido por su médico de AP, aportando además información clínicamente 
        relevante para su médico.</string>
    <string name="desc_guia5">Al pulsar sobre el recuadro del resultado (marcado en color) aparecerá una vista con un resumen del paciente y una explicación 
        más extensa del resultado. En esta pantalla aparece también la tabla de la clasificación de la enfermedad renal crónica de la KDIGO 2012, y aparecerá 
        señalado el recuadro correspondiente al estadio de ERC del paciente en cuestión.</string>
    <string name="desc_guia6">La app hace además una serie de recomendaciones acerca del seguimiento que se debe realizar al paciente teniendo en cuenta su estadio 
        de enfermedad renal. Desde la pantalla de resultados, en el apartado de “Otras recomendaciones” se especifica todo aquello que el médico de AP ha de tener 
        en cuenta a la hora de valorar a un paciente con ERC, donde se incluyen recomendaciones acerca de hábitos dietéticos, control de la presión arterial, 
        tratamiento de la diabetes mellitus, control y tratamiento de la dislipemia, hiperuricemia y anemia, recomendaciones acerca de la medicación y también 
        de la frecuencia y seguimiento de estos pacientes.</string>
    <string name="desc_guia7">El documento de consenso en el cual se basa la aplicación, está disponible desde la app en formato pdf para que el usuario lo pueda 
        consultar en cualquier momento que lo desee.</string>
	<string name="desc_guia8">En el botón de información, aparecerá una pantalla, con varios apartados desplegables, que incluyen la presentación de la app, 
	    descripción, advertencias y condiciones generales. Aparece también la guía de usuario, las abreviaturas y símbolos utilizados, el comité de edición y 
	    colaboradores, las referencias bibliográficas y la posibilidad de valorar la aplicación en las distintas plataformas o contactar con los propietarios de 
	    la app, así como compartirla con otros usuarios o contactos.</string>
	<string name="symbolsTitle">&lt;u>Símbolos utilizados&lt;/u></string>
	<string name="masculino">Sexo masculino</string>
	<string name="femenino">Sexo femenino</string>
	<string name="nextScreen">Siguiente pantalla</string>
	<string name="docConsenso">Acceso al documento de consenso sobre la Enfermedad Renal Crónica(27 noviembre 2012)</string>
	<string name="info">Información</string>
	<string name="contact">Contacto</string>
	<string name="masSymbol">Mostrar más</string>
	<string name="ocultarSymbol">Ocultar</string>
</resources>