<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_bitmap"
    tools:context="com.madilon.nefroconsultor.ui.ResultActivity" >

    <TextView
        android:id="@+id/cabecera1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_result"
        android:textColor="@color/windowsBackground"
        android:textSize="@dimen/btnText"
        android:background="@color/titleTextColor"
        android:gravity="center"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"/>
    
    <LinearLayout
        android:id="@+id/layout_overclasificacion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/cabecera1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@drawable/bg_resultado_bitmap">
	    
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            
            <TextView
	            android:id="@+id/text_fgeckdepi"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/titleTextColor"
	            android:textSize="@dimen/otrosMotivosTitle" 
	            android:text="@string/fgecdk"/>

            <TextView
	            android:id="@+id/text_fgeckdepi_units"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginStart="5dp"
	            android:layout_marginLeft="5dp"
	            android:textColor="@color/titleTextColor"
	            android:textSize="@dimen/explanationText"
	            android:text="@string/units"/>
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            
            <TextView
	            android:id="@+id/text_mdrd"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/titleTextColor"
	            android:textSize="@dimen/otrosMotivosTitle" 
	            android:text="@string/mdrd"/>

            <TextView
	            android:id="@+id/text_mdrd_units"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginStart="5dp"
	            android:layout_marginLeft="5dp"
	            android:textColor="@color/titleTextColor"
	            android:textSize="@dimen/explanationText"
	            android:text="@string/units"/>
        </LinearLayout>
        
        <TextView 
            android:id="@+id/text_clasificacion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/titleTextColor"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/explanationText"/>
            
	</LinearLayout>
	
    <TextView 
        android:id="@+id/text_resultado"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/layout_overclasificacion"
        android:textColor="@color/btnCalcularText"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/result"
        android:textSize ="@dimen/resultadoBox"
        android:shadowColor="#000000"
        android:shadowRadius="2"/>
    
    <TextView
        android:id="@+id/cabecera2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_resultado"
        android:layout_marginTop="10dp"
        android:text="@string/recomendaciones"
        android:textColor="@color/windowsBackground"
        android:textSize="@dimen/btnText"
        android:background="@color/titleTextColor"
        android:gravity="center"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"/>
    
    <LinearLayout
        android:id="@+id/layout_btn_recomendaciones"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
	        
	    <Button 
	        android:id="@+id/btn_recomendaciones"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:text="@string/btnRecomendaciones"
	        android:shadowColor="#000000"
	        android:background="@drawable/btn_calcular"
	        android:textColor="@color/btnCalcularText"
	        android:textSize="@dimen/btnText"/>
	</LinearLayout>
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_btn_recomendaciones"
        android:layout_below="@id/cabecera2"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
	    android:layout_marginLeft="@dimen/activity_horizontal_margin">
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
		    
	        <TextView 
	            android:id="@+id/text_recomendaciones_title"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:gravity="center_horizontal"
	            android:text="@string/remitir"
	            android:textColor="@color/titleTextColor"
	            android:textSize="@dimen/btnText"/>
	        
	        <TextView 
	            android:id="@+id/text_recomendaciones_subtitle"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="8dp"
	            android:textColor="@color/titleTextColor"
	            android:textSize="@dimen/otrosMotivosTitle"/>
	        
	        <TextView 
	            android:id="@+id/text_recomendaciones_descripcion"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:textColor="@color/titleTextColor"
	            android:textSize="@dimen/otrosMotivosTitle"/>
	        
	        <TextView 
	            android:id="@+id/text_recomendaciones_asterisco"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:textColor="@color/titleTextColor"
	            android:textSize="@dimen/otrosMotivosTitle"
	            android:visibility="gone"/>
	        
	        <TextView 
	            android:id="@+id/text_recomendaciones_casoA2"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:textColor="@color/titleTextColor"
	            android:textSize="@dimen/otrosMotivosTitle"
	            android:text="@string/text_recomendaciones_casoA2"
	            android:visibility="gone"/>
	        
	        <TextView 
	            android:id="@+id/text_recomendaciones_casoA2_elena"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:textColor="@color/titleTextColor"
	            android:textSize="@dimen/otrosMotivosTitle"
	            android:text="@string/text_recomendaciones_casoA2_elena"
	            android:visibility="gone"/>
	        
	    </LinearLayout>
	</ScrollView>
</RelativeLayout>
